# de-interview-assignments

./: README.md  pyproject.toml  requirements.txt  task_1.py  task_2.py  task_3.py  task_4.py  tasks.ipynb
