[tool.poetry]
name = "de-interview-assignments"
version = "0.1.0"
description = "A repo containing Data Engineer interview assignments"
authors = ["Andreas Granqvist <andreas.granqvist@capgemini.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.16.0"
duckdb = "^1.1.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
