[project]
name = "de-interview-assignments"
version = "0.1.0"
description = "A repo containing Data Engineer interview assignments"
authors = ["Andreas Granqvist <andreasgranqvist@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.1.3",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "polars>=1.20.0",
    "pyarrow>=19.0.0",
    "ipykernel>=6.29.5",
]
